containers/Landing/Landing.module.scss: fix overlapping star by increasing margin-top

--- a/src/containers/Landing/Landing.module.scss
+++ b/src/containers/Landing/Landing.module.scss
@@ -73,7 +73,7 @@
 
   .section2 {
     width: 100%;
-    margin-top: -160px;
+    margin-top: -140px;
 
     .Box {
       display: flex;
